fix the responsiveness and alignment of feed actions

--- a/css/profileStyles.css
+++ b/css/profileStyles.css
@@ -165,23 +165,70 @@ label:hover {
 }
 
 .feed_actions{
-  width: 100%;
-  display: inline-block;
-  margin: 8px;
+  width: 45%;
+  display: inline-flex;
+  margin: -35px 35px;
 }
 
 .feed_actions a{
-  text-decoration: none;
-  padding: 15px 73px;
+  padding: 5px 55px;
+  margin-top: 12px;
+  margin-left: auto;
   border: none;
+  white-space: nowrap;
+  align-content: space-evenly;
   cursor: pointer;
-  text-align: center;
+  display: inline-flex;
+  align-items: center;
   text-decoration: none;
 }
 
 .feed_actions a:hover{
   border-radius: 5px;
   background-color: #cccccc;
+}
+
+@media only screen and (min-width: 600px){
+  .feed_actions{
+    width: 50%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  .feed_actions{
+    width: 50%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .feed_actions{
+    width: 85%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (max-width: 992px){
+  .feed_actions{
+    width: 85%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (min-width: 1200px){
+  .feed_actions{
+    width: 84%;
+    min-height: 20%;
+  }
+}
+hr{
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 0.5em 0px;
+  padding: 0;
 }
 
 .feed_post{
@@ -237,5 +284,14 @@ label:hover {
 
 .sponsored-bar-footer a:hover{
   text-decoration: underline;
+}
+
+hr{
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 0.5em 0px;
+  padding: 0;
 }
 </style>
