--- a/css/viewPostStyles.css
+++ b/css/viewPostStyles.css
@@ -1,22 +1,23 @@
 textarea{
-	resize: none;
-	overflow: auto;
-	border-radius: 8px;
-	max-width: 75%;
+  resize: none;
+  overflow: auto;
+  border-radius: 8px;
+  margin-top: 15px;
+  max-width: 75%;
   border-color: #d9d9d9;
 }
 
 .btn-primary {
-	background-color: #660066;
-	border-color: #007bff;
-	border-radius: 20px;
-	width: 120px;
-	height: 40px;
-	float: right;
-	border: none;
-	color: white;
-	font-size: 14px;
-	margin-right: 2%;
+  background-color: #660066;
+  border-color: #007bff;
+  border-radius: 20px;
+  width: 127px;
+  height: 43px;
+  float: right;
+  border: none;
+  color: white;
+  font-size: 14px;
+  margin-right: 2%;
 }
 
 .btn-primary:hover {
@@ -77,13 +78,6 @@ textarea{
   border-bottom-color: transparent;  
 }
 
-/*YAN NA YUN, DI KO LANG TALAGA ALAM TONG MAX-WIDTH MIN-WIDTH ISH*/
-@media only screen and (max-width: 600px){
-	.comment-dp img{
-		display: none;
-	}
-}
-
 .feed_title{
   text-align: left;
   font-size: 18px;
@@ -132,23 +126,70 @@ textarea{
 }
 
 .feed_actions{
-  width: 100%;
-  display: inline-block;
-  margin: 8px;
+  width: 45%;
+  display: inline-flex;
+  margin: -35px 35px;
 }
 
 .feed_actions a{
-  text-decoration: none;
-  padding: 15px 71px;
+  padding: 7px 45px;
+  margin-top: 12px;
+  margin-left: auto;
   border: none;
+  white-space: nowrap;
+  align-content: space-evenly;
   cursor: pointer;
-  text-align: center;
+  display: inline-flex;
+  align-items: center;
   text-decoration: none;
 }
 
 .feed_actions a:hover{
   border-radius: 5px;
   background-color: #cccccc;
+}
+
+@media only screen and (min-width: 600px){
+  .feed_actions{
+    width: 50%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  .feed_actions{
+    width: 50%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .feed_actions{
+    width: 85%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (max-width: 992px){
+  .feed_actions{
+    width: 85%;
+    min-height: 20%;
+  }
+}
+
+@media only screen and (min-width: 1200px){
+  .feed_actions{
+    width: 84%;
+    min-height: 20%;
+  }
+}
+hr{
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 0.5em 0px;
+  padding: 0;
 }
 
 .feed_post{
